# MemoryBank

./: .bandit  .codacy.yaml  .cursorignore  .gitignore  .infisical.json  .license-policy.json  .pre-commit-config.yaml  .revive.toml  .safety-policy.json  .semgrepignore  ADVANCED_MEMORY_SYSTEM_GUIDE.md  BMAD_DATABASE_INTEGRATION_STRATEGY.md  BMAD_MONITORING_QUICKSTART.md  CHECKLIST_RESTRUCTURE.md  CONTEXT7_INTEGRATION_SUMMARY.md  DEPENDENCY_ANALYSIS_REPORT.md  DOCUMENTATION_CLEANUP_SUMMARY.md  GITHUB_PROJECTS_IMPLEMENTATION_PLAN.md  GRACEFUL_ERROR_HANDLING_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_IMPLEMENTATION.md  LICENSE  MEM0_IMPROVEMENTS_ROADMAP.md  MEMORY_SYSTEM_STATUS.md  Makefile  PG16_BASELINE_DISCOVERY_TASKS.md  README.md  RENOVATE_DEPLOYMENT_GUIDE.md  STEP_3_COMPLETION_SUMMARY.md  TESTING_FRAMEWORK_GUIDE.md  add-global-memory-rule.sh  advanced-memory-aliases.sh  ai-memory-aliases.sh  bmad.sh  bmad_interpreter.py  compatibility-report.md  dashy-config-fixed.yml  dashy-config-updated.yml  dashy-config.yml  dependency-audit.md  (+37 more)
.bmad-core/: core-config.yml  install-manifest.yaml  install-manifest.yml
.bmad-core/agents/: analyst.md  bmad-orchestrator.md  dev.md  pm.md  qa.md
.bmad-core/checklists/: memory-integration-validation.md
.bmad-core/data/: agent-interaction-standards.md  bmad-kb.md
.bmad-core/tasks/: memory-bank-integration.md
.bmad-creator-tools/: install-manifest.yaml
.bmad-creator-tools/tasks/: create-doc.md
.bmad-infrastructure-devops/: install-manifest.yaml
.cursor/rules/: analyst.mdc  architect.mdc  bmad-master.mdc  bmad-orchestrator.mdc  bmad-the-creator.mdc  context7-documentation.mdc  core-development.mdc  debugging-troubleshooting.mdc  dev.mdc  development-standards-unified-auto.mdc  development-templates.mdc  environment-integration.mdc  game-designer.mdc  game-developer.mdc  game-sm.mdc  git-workflows.mdc  linear-integration.mdc  (+16 more)
.gemini/: settings.json
.github/: dependabot.yml
ICE-graph/: README.md  docker-compose.yml
archive/: ARCHIVE_SUMMARY.md  cleanup-stale-content.sh
archive/custom-gpt-adapter/: README.md  pyproject.toml  pytest.ini
archive/custom-gpt-adapter/app/: main.py
archive/custom-gpt-adapter/app/api/v1/endpoints/: memories.py  search.py
archive/custom-gpt-adapter/app/clients/: memory_bank_client.py
archive/custom-gpt-adapter/app/core/: database.py
archive/custom-gpt-adapter/app/models/: custom_gpt.py
archive/custom-gpt-adapter/app/schemas/: __init__.py
archive/custom-gpt-adapter/app/workers/: memory_processor.py
archive/custom-gpt-adapter/docker/: Dockerfile.api  Dockerfile.worker  docker-compose.yml
archive/custom-gpt-adapter/migrations/: env.py
archive/custom-gpt-adapter/scripts/deploy/: deploy-production.sh
archive/custom-gpt-adapter/scripts/manage/: generate_api_docs.py
archive/custom-gpt-adapter/tests/: test_e2e.py
backups/: .gitkeep  README.md
custom-gpt-adapter/: .env.production.template  DEPLOYMENT_GUIDE.md  pyproject.toml  pytest.ini  requirements.txt
custom-gpt-adapter/.github/workflows/: ci.yml
custom-gpt-adapter/app/: main.py
custom-gpt-adapter/app/api/: deps.py
custom-gpt-adapter/app/api/v1/: bmad.py
custom-gpt-adapter/app/api/v1/endpoints/: bmad.py  memories.py  search.py  users.py
custom-gpt-adapter/app/core/: config.py  limiter.py  security.py
custom-gpt-adapter/app/models/: bmad_models.py  custom_gpt.py
custom-gpt-adapter/app/schemas/: token.py
custom-gpt-adapter/app/services/: bmad_memory_integration.py  bmad_service.py
custom-gpt-adapter/docker/: docker-compose.prod.yml
custom-gpt-adapter/migrations/: env.py
custom-gpt-adapter/migrations/versions/: 97c83b94b9c4_initial_migration.py  bmad_system_migration.py
custom-gpt-adapter/monitoring/: grafana-dashboard.json  prometheus.yml
custom-gpt-adapter/scripts/: create_client_app.py
custom-gpt-adapter/scripts/manage/: generate_api_docs.py  manage_custom_gpt_app.py
custom-gpt-adapter/tests/: conftest.py  test_e2e.py
custom-gpt-adapter/tests/api/v1/endpoints/: test_memories.py  test_search.py
custom-gpt-adapter/tests/clients/: test_memory_bank_client.py
dependencies/: README.md  ai.txt  core.txt  dev.txt  examples.txt  test.txt
docker/: Dockerfile.metrics-exporter  docker-compose.monitoring.yml  docker-compose.test.yml  postgres-test.yml
docs/: BMAD_DATABASE_INTEGRATION_STRATEGY.md  BMAD_IMPLEMENTATION_SUMMARY.md  DATABASE_SETUP_SOLUTION.md  Dependency_Governance_Policy.md  EPIC_1_COMPLETION_REPORT.md  MONITORING_SETUP.md  Monorepo_Workspace_Blueprint.md  PHASE_4_COMPLETION_REPORT.md  PROJECT_CONTROL_CENTER.md  Poetry_Migration_Plan.md  README.md  S0-CG_COVERAGE_GATE_HANDOFF.md  S0-LIC_LICENSE_SCANNING_HANDOFF.md  S0-LIC_LICENSE_VIOLATION_REMEDIATION_HANDOFF.md  SECURITY_VULNERABILITY_REPORT.md  SPRINT_0_HANDOFF.md  STORY_1_7_SUMMARY.md  VECTOR_GRAPH_SYNC_IMPLEMENTATION.md  benchmarking-plan.md  bmad-testing-quality-architecture.md  brownfield-architecture.md  brownfield-prd.md  disaster-recovery.md  index.md  infisical-integration-architecture.md  security-audit-plan.md  test-suite-analysis.md  test-suite-checklist.md
infrastructure/: INFRASTRUCTURE_OPTIMIZATION_GUIDE.md  Makefile.enhanced  memory-dev.sh  ui-package-scripts.json  vscode-tasks.json
mem0/: Makefile  pyproject.toml  requirements-dev.txt
monitoring/: dashboard.json  dependency-metrics-dashboard.json  prometheus.yml
scripts/: advanced-memory-ai.py  ai-memory-integration.py  bmad-agent-infisical-integration.sh  compatibility-check.sh  demo-parallel-testing.sh  dependency-metrics-exporter.py  deploy-renovate.sh  health-check.sh  infisical-monitoring.py  infisical-performance-optimizer.py  integration-test.sh  license-compliance-check.sh  monitor-testing-performance.sh  pg16-baseline-discovery.sh  rollback-to-main.sh  run-tests.sh  setup-testing-environment.sh  start-bmad-testing.sh  start-infisical-stack.sh  start-monitoring-dashboard.sh
security-reports/: test-safety.json
tests/: .env.test  README.md  ai_memory_tests.py  ai_testing_framework.py  conftest.py  test_ephemeral_postgres.py  test_main.py
(+326 files in other folders)
