[tool.poetry]
name = "custom-gpt-adapter"
version = "0.1.0"
description = "Custom GPT Adapter Service"
authors = ["AI Agent <ai-agent@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = "^2.0.25"
psycopg = {extras = ["binary"], version = "^3.1.9"}
alembic = "^1.13.1"
redis = "^5.0.1"
celery = "^5.3.6"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.2.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
prometheus-fastapi-instrumentator = "^6.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.6"
pytest-env = "^1.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 